<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">四角形専用面積計算機</string>
    <string name="action_settings">settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="numPeople">縦：</string>
    <string name="people">cm</string>
    <string name="money">横：</string>
    <string name="yen">cm</string>
    <string name="calc">計算</string>
    <string name="oneMoney">面積：</string>
    <string name="result">0</string>
    <string name="yenyen">cm</string>
    <string name="yenyen2">2</string>

    <string name="radius">半径：</string>
    <string name="height">高さ：</string>
    <string name="capacity">体積：</string>
    <string name="cube">3</string>

    <!-- 設定画面用 -->
    <string name="setting">設定</string>
    <string name="fraction">端数</string>
    <string name="dlg_fraction_title">端数を選択してください</string>
    <string name="roundup_title">端数切り上げ</string>
</resources>