<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1">

    <!-- 人数の入力行 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/numPeople"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/eTxtNum"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <!-- 金額の入力行 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/eTxtMoney"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/calc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneMoney"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- 結果の金額表示行 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yenyen"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:lineSpacingExtra="40sp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/yenyen2"
                android:id="@+id/textView"
                android:gravity="bottom"
                android:textColor="#000000"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".MainActivity">

    <jp.co.july.tokyo.warikan.TestView
        android:id="@+id/test_view"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="90dp"
        android:layout_width="250dp"
        android:layout_height="250dp" />

    <TextView
        android:text="
        abcd123456789\n
        cdefg123456789\n
        \n
        3456978\n
        hijklmnopq012698745\n
        rst4565848uvwx\n"
        android:textColor="#cccccc"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:text="Button"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="370dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>



